# rapunzel

./: .gitignore  Activity1.nvact  Makefile.am  README.md  Rapunzel.sln  Rapunzel.v11.suo.doc  Rapunzel.vcxproj  Rapunzel.vcxproj.filters  configure.ac
Debug/: CL.read.1.tlog  CL.write.1.tlog  Rapunzel.ilk  Rapunzel.lastbuildstate  cl.command.1.tlog  kernel.cu.cache  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
Debug/OFF/: humanHair10k.off  humanHair11k.off  humanHair4k.off  humanHair5k.off  humanHair7k.off  scalp.off
Debug/Sources/: kernel.cu.deps
OFF/: mannequin.off
OFF/old/: HairStrand.off
Sources/: Camera.cpp  Camera.h  Floor.cpp  Floor.h  Hair.cpp  Hair.h  HeadersAndDefines.h  Light.cpp  Light.h  Mannequin.cpp  Mannequin.h  Object3D.cpp  Object3D.h  Vector2D.h  Vector3D.h  Vector4D.h  bmpLoader.cpp  bmpLoader.h  freeglut_ext.h  freeglut_std.h  kernel.cu  main.cpp  offLoader.cpp  offLoader.h  shaderLoader.cpp
Sources/boost/numeric/: odeint.hpp
boost/numeric/odeint/: config.hpp
off/: Mesh.off  humanHair12k.off  humanHair1k.off  humanHair2k.off  humanHair3k.off  humanHair6k.off  humanHair8k.off  humanHair9k.off  skin.off
off/old/: mannequin.off  mannequin2.003.off
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: .gitignore  Camera.cpp  Camera.h  Floor.cpp  Floor.h  Hair.cpp  Hair.h  HeadersAndDefines.h  Light.cpp  Light.h  Makefile.am  Makefile.in  Mannequin.cpp  Mannequin.h  Object3D.cpp  Object3D.h  Vector2D.h  Vector3D.h  Vector4D.h  bmpLoader.cpp  bmpLoader.h  errors.cpp  kernel.cu  main.cpp  offLoader.cpp  offLoader.h  shaderLoader.cpp  shaderLoader.h
